--- a/data.ipynb
+++ b/data.ipynb
@@ -362,6 +362,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initializing Different Types of Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All 0s matrix\n",
+    "np.zeros((2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 1],\n",
+       "        [1, 1]],\n",
+       "\n",
+       "       [[1, 1],\n",
+       "        [1, 1]],\n",
+       "\n",
+       "       [[1, 1],\n",
+       "        [1, 1]],\n",
+       "\n",
+       "       [[1, 1],\n",
+       "        [1, 1]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All 1s matrix\n",
+    "np.ones((4,2,2),dtype=\"int32\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[99, 99],\n",
+       "       [99, 99]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Any other number\n",
+    "np.full((2,2),99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 4, 4, 4, 4, 4, 4],\n",
+       "       [4, 4, 4, 4, 4, 4, 4]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Any othrer number (full_like)\n",
+    "np.full_like(a,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.30045499, 0.01294252],\n",
+       "       [0.73336799, 0.79229789],\n",
+       "       [0.08032978, 0.7583581 ],\n",
+       "       [0.7201759 , 0.53388532]])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random decimal numbers\n",
+    "np.random.rand(4,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5,  3, -1],\n",
+       "       [ 0,  1,  0],\n",
+       "       [ 1, -1,  6]], dtype=int32)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random Integer values\n",
+    "np.random.randint(-4,7,size=(3,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The identity matrix\n",
+    "np.identity(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [1, 2, 3],\n",
+       "       [1, 2, 3]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Repeat an array\n",
+    "arr = np.array([[1,2,3]])\n",
+    "r1 = np.repeat(arr,3,axis=0)\n",
+    "r1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
